Fix nav link not covering whole area

--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,6 @@
   color: white;
 }
 
-a {
+.sectionContent a {
   color: #ffa100;
 }
