--- a/src/Header.css
+++ b/src/Header.css
@@ -26,7 +26,7 @@
   background-color: gray;
 }
 
-.nav-link a {
+.Header a {
   color: white;
   text-decoration: none;
 }
